...
    <string name="hours_ago">%1$d hours ago</string>
    <string name="days_ago">%1$d days ago</string>
    <string name="at_time">at %1$s</string>

    <!-- Tags -->
    <string name="tag_sports">Sports</string>
    <string name="tag_music">Music</string>
    <string name="tag_arts">Arts</string>
    <string name="tag_food_drink">Food &amp; Drink</string>
    <string name="tag_outdoor">Outdoor</string>
    <string name="tag_tournament">Tournament</string>
    <string name="tag_workshop">Workshop</string>

...
